# real-estate-pf-liquidity-risk

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: sample_interest_rates.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: dim_batch.sql  dim_outcome.sql  fct_scenario.sql  mart_irr_percentiles.sql  mart_outcome_summary.sql  mart_survival_curve.sql  schema.yml
dbt/models/staging/: sources.yml  stg_scenarios.sql
dbt/tests/: assert_survival_rate_in_range.sql
docs/: mkdocs.yml
docs/docs/: index.md
pf_liquidity_risk/: __init__.py  app.py  dataset.py  features.py  plots.py
pf_liquidity_risk/configs/: private_config.py  public_config.py
pf_liquidity_risk/modeling/: config_model.py  predict.py  train.py
pipeline/: __init__.py  calibrate.py  cli.py  config.py  extract_rates.py  load.py  simulate.py  transform.py  validate.py
pipeline/sql/: mart_irr_percentiles.sql  mart_outcome_summary.sql  mart_survival_curve.sql  schema.sql
tests/: test_data.py  test_pipeline.py
